<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_grey"
    tools:context=".StatsActivity">

    <Button
        android:id="@+id/txt_info"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"

        android:backgroundTint="@color/background_dark_grey"
        android:enabled="false"
        android:text="@string/txt_info"
        android:textColor="@color/light_grey"
        android:textSize="12sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_back"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/txt_statistics"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"

        android:backgroundTint="@color/background_dark_grey"
        android:enabled="false"
        android:text="@string/txt_statistics"
        android:textColor="@color/light_yellow"
        android:textSize="16sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"

        android:backgroundTint="@color/background_lighter_grey"
        android:enabled="true"
        android:onClick="clickBack"
        android:text="@string/btn_back"
        android:textColor="@color/light_yellow"

        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- stat label buttons -->

    <Button
        android:id="@+id/label_msElapsed"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"

        android:backgroundTint="@color/orange"
        android:enabled="false"
        android:gravity="bottom|center_horizontal"
        android:text="@string/txt_total_time_studied"
        android:textColor="@color/white"
        android:textSize="12sp"

        app:layout_constraintBottom_toTopOf="@+id/label_maxMS"
        app:layout_constraintEnd_toStartOf="@+id/label_numSessions"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_statistics" />

    <Button
        android:id="@+id/label_numSessions"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"

        android:backgroundTint="@color/teal"
        android:enabled="false"
        android:gravity="bottom|center_horizontal"
        android:text="@string/txt_total_num_sessions"
        android:textColor="@color/white"
        android:textSize="12sp"

        app:layout_constraintBottom_toTopOf="@+id/label_avgMS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/label_msElapsed"
        app:layout_constraintTop_toBottomOf="@+id/txt_statistics" />

    <Button
        android:id="@+id/label_maxMS"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="24dp"

        android:backgroundTint="@color/green"
        android:enabled="false"
        android:gravity="bottom|center_horizontal"
        android:text="@string/txt_max_time"
        android:textColor="@color/white"
        android:textSize="12sp"

        app:layout_constraintBottom_toTopOf="@+id/txt_info"
        app:layout_constraintEnd_toStartOf="@+id/label_avgMS"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_msElapsed" />


    <Button
        android:id="@+id/label_avgMS"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"

        android:backgroundTint="@color/red"
        android:enabled="false"
        android:gravity="bottom|center_horizontal"
        android:text="@string/txt_avg_time_per_session"
        android:textColor="@color/white"
        android:textSize="12sp"

        app:layout_constraintBottom_toTopOf="@+id/btn_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/label_maxMS"
        app:layout_constraintTop_toBottomOf="@+id/label_numSessions" />

    <!-- actual stats -->

    <TextView
        android:id="@+id/stat_msElapsed"
        android:layout_width="0dp"
        android:layout_height="0dp"


        android:layout_marginTop="16dp"
        android:layout_marginBottom="60dp"
        android:gravity="center"
        android:text="@string/txt_default_time"
        android:textColor="@color/white"
        android:textSize="20sp"

        app:layout_constraintBottom_toBottomOf="@+id/label_msElapsed"
        app:layout_constraintEnd_toEndOf="@+id/label_msElapsed"
        app:layout_constraintStart_toStartOf="@+id/label_msElapsed"
        app:layout_constraintTop_toTopOf="@+id/label_msElapsed" />

    <TextView
        android:id="@+id/stat_numSessions"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="60dp"

        android:gravity="center"
        android:text="@string/txt_default_num_sessions"
        android:textColor="@color/white"
        android:textSize="20sp"

        app:layout_constraintBottom_toBottomOf="@+id/label_numSessions"
        app:layout_constraintEnd_toEndOf="@+id/label_numSessions"
        app:layout_constraintStart_toStartOf="@+id/label_numSessions"
        app:layout_constraintTop_toTopOf="@+id/label_numSessions" />

    <TextView
        android:id="@+id/stat_maxMS"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="60dp"

        android:gravity="center"
        android:text="@string/txt_default_time"
        android:textColor="@color/white"
        android:textSize="20sp"

        app:layout_constraintBottom_toBottomOf="@+id/label_maxMS"
        app:layout_constraintEnd_toEndOf="@+id/label_maxMS"
        app:layout_constraintStart_toStartOf="@+id/label_maxMS"
        app:layout_constraintTop_toTopOf="@+id/label_maxMS" />

    <TextView
        android:id="@+id/stat_avgMS"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="60dp"

        android:gravity="center"
        android:text="@string/txt_default_time"
        android:textColor="@color/white"
        android:textSize="20sp"

        app:layout_constraintBottom_toBottomOf="@+id/label_avgMS"
        app:layout_constraintEnd_toEndOf="@+id/label_avgMS"
        app:layout_constraintStart_toStartOf="@+id/label_avgMS"
        app:layout_constraintTop_toTopOf="@+id/label_avgMS" />

</androidx.constraintlayout.widget.ConstraintLayout>